--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.17.0",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.20",
