--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-EMAIL_USER=nomanirshad0324@gmail.com
-EMAIL_PASS=pyas hxyy rixv xkfk
+EMAIL_USER=your-email@example.com
+EMAIL_PASS=your-email-password
+PORT=3000
+NODE_ENV=development
+# MONGODB_URI=mongodb://localhost:27017/decentdetailers
